--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <!-- Icons -->
   <link rel="stylesheet" href="/assets/font-awesome-old/css/font-awesome.min.css">
 
-  <title>CloudInnovare</title>
+  <title>RM Studio</title>
 </head>
 
 <body>
